# Blog-Web

./: .gitignore  README.md  pyproject.toml  view_users.py
scripts/: create_db.ps1  create_db.sql
src/flask_blog/: __init__.py  forms.py  models.py  run.py
src/flask_blog/static/css/: style.css
src/flask_blog/templates/: base_template.html  index.html  login_form.html  post_detail.html
src/flask_blog/templates/admin/: post_form.html  signup_form.html  users_list.html
src/flask_blog/templates/errors/: 404.html  500.html
